dates/crashes/e5b39fb245d11a3436a26b5bbd2c7c94f99f1f7d/report0
EXT4-fs error (device loop1) in ext4_do_update_inode:5151: error 27
EXT4-fs error (device loop1): __ext4_ext_dirty:169: inode #2: comm syz.1.417: mark_inode_dirty error
device lo entered promiscuous mode
==================================================================
BUG: KASAN: use-after-free in ext4_rename_dir_prepare+0x3b7/0x450 fs/ext4/namei.c:3546
Read of size 4 at addr ffff888040373000 by task syz.1.417/7762

CPU: 0 PID: 7762 Comm: syz.1.417 Not tainted 5.10.0 #1
Hardware name: QEMU Ubuntu 24.04 PC (i440FX + PIIX, 1996), BIOS 1.16.3-debian-1.16.3-2 04/01/2014
Call Trace:
 __dump_stack lib/dump_stack.c:77 [inline]
 dump_stack+0x107/0x163 lib/dump_stack.c:118
 print_address_description.constprop.0+0x1c/0x210 mm/kasan/report.c:385
 __kasan_report mm/kasan/report.c:545 [inline]
 kasan_report.cold+0x37/0x7c mm/kasan/report.c:562
 ext4_rename_dir_prepare+0x3b7/0x450 fs/ext4/namei.c:3546
 ext4_rename+0x15b1/0x2640 fs/ext4/namei.c:3816
 ext4_rename2+0x1af/0x240 fs/ext4/namei.c:4109
 vfs_rename+0xf1b/0x1960 fs/namei.c:4310
 do_renameat2+0x732/0xb80 fs/namei.c:4457
 __do_sys_rename fs/namei.c:4503 [inline]
 __se_sys_rename fs/namei.c:4501 [inline]
 __x64_sys_rename+0x5d/0x80 fs/namei.c:4501
 do_syscall_64+0x33/0x40 arch/x86/entry/common.c:46
IPv6: ADDRCONF(NETDEV_CHANGE): lo: link becomes ready
 entry_SYSCALL_64_after_hwframe+0x44/0xa9
RIP: 0033:0x7f9ef729eef9
Code: ff ff c3 66 2e 0f 1f 84 00 00 00 00 00 0f 1f 40 00 48 89 f8 48 89 f7 48 89 d6 48 89 ca 4d 89 c2 4d 89 c8 4c 8b 4c 24 08 0f 05 <48> 3d 01 f0 ff ff 73 01 c3 48 c7 c1 a8 ff ff ff f7 d8 64 89 01 48
RSP: 002b:00007f9ef5ef7038 EFLAGS: 00000246 ORIG_RAX: 0000000000000052
RAX: ffffffffffffffda RBX: 00007f9ef7457058 RCX: 00007f9ef729eef9
RDX: 0000000000000000 RSI: 0000000020000180 RDI: 0000000020000140
RBP: 00007f9ef7311b76 R08: 0000000000000000 R09: 0000000000000000
R10: 0000000000000000 R11: 0000000000000246 R12: 0000000000000000
R13: 0000000000000000 R14: 00007f9ef7457058 R15: 00007ffe4c149008

The buggy address belongs to the page:
page:00000000addda8ea refcount:0 mapcount:0 mapping:0000000000000000 index:0x1 pfn:0x40373
flags: 0x100000000000000()
raw: 0100000000000000 ffffea0000e43588 ffffea0000f75308 0000000000000000
raw: 0000000000000001 0000000000000000 00000000ffffffff 0000000000000000
page dumped because: kasan: bad access detected

Memory state around the buggy address:
 ffff888040372f00: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
 ffff888040372f80: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
>ffff888040373000: ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff
                   ^
 ffff888040373080: ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff
 ffff888040373100: ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff
==================================================================
